src/App.css
:root {
  --header-bg-dark: #202225;
  --header-fg-dark: #A6A7A8;
  --sidebar-bg-dark: #2F3136;
  --sidebar-fg-dark: #ECEDEE;
  --content-bg-dark: #36393F;
  --content-fg-dark: #DCDDDE;

  --accent: #7289DA;

  /** all font sizes */
  --all-notes-header-size: calc(24px + (26 - 24) * ((100vw - 300px) / (1600 - 300)));
  --selected-note-header-size: calc(20px + (26 - 20) * ((100vw - 300px) / (1600 - 300)));
  --note-header-size: calc(18px + (20 - 18) * ((100vw - 300px) / (1600 - 300)));
  --note-text-size: calc(14px + (16 - 14) * ((100vw - 300px) / (1600 - 300)));
  --note-date-size: calc(11px + (12 - 11) * ((100vw - 300px) / (1600 - 300)));

  --btn-opts-width: 24px;
  --btn-opts-bg: gray;
}

body {
  overflow: hidden;
  margin: 0;
  padding: 0;

  background-color: var(--header-dark-bg);
}

body * {
  outline-color: var(--accent);
}

::selection, ::-moz-selection {
  background-color: var(--accent);
  color: var(--accent);
}

.App {
  box-sizing: border-box;
  width: 100%;
  height: 100vh;
  overflow: hidden;

  display: grid;
  grid-template-columns: 300px 1fr;
  grid-template-rows: [header] max-content [content] 1fr [footer] max-content;
  grid-template-areas: "header header"
                       "content content"
                       "footer footer";
}

header, footer {
  box-sizing: border-box;

  color: var(--header-fg-dark);
  background-color: var(--header-bg-dark);
}

header {
  grid-area: header;
}

h1 {
  max-height: 22px;
  height: 22px;
  margin: 0;
  padding: 4px 0px 0px 4px;
  font-weight: bold;
  font-size: 1em;
}

footer {
  height: 16px;
  grid-area: footer;
}


/** edit-note-opts: holds the options for modifying the selected note
 **  currently SAVE is the only option */

.note-opts-bar {
  width: 100%;
  max-height: 40px;
  height: 40px;
  box-sizing: border-box;
  margin: 0 0 1.5em 0;

  display: flex;
  flex-flow: row nowrap;
  align-items: center;

  border: solid 1px gray;
  border-style: none none solid none;

  justify-content: space-between;
  background-color: none;
}

#edit-note-save-btn {
  margin-right: 3em;
}

/** default button styling in the options bar */
.note-opts-btn {
  background: none;
  padding: 0;
  border-radius: 8px;
  background-color: var(--btn-opts-bg);
}

.note-opts-btn:hover {
  background-color: var(--accent);
}

/** default image styling for button icons */
.note-opts-btn img {
  display: block;
  width: var(--btn-opts-width);
  height: auto;
}




/********************************* 
 ** DisplayNotes setup
* *********************************/

/** display-notes: the wrapper around the list of saved notes*/
.note-view {
  box-sizing: border-box;
  grid-area: content;
  overflow: hidden;

  display: flex;
  flex: 1 1 100%;
  position: relative; /** used to display a selectedNote fullscreen on mobile */
}

.all-notes {
  box-sizing: border-box;
  width: 100%;
  overflow-y: auto;
  padding: 1em 0;
  background-color: var(--sidebar-bg-dark);
  position: relative;

  display: flex;
  flex-flow: column nowrap;
  align-items: center; 
}

#all-notes-title {
  color: var(--header-fg-dark);
}

#all-notes-opts-bar {
  padding: 0 0.5em;
}

.all-notes-opts-title {
  font-weight: bold;
  font-size: var(--all-notes-header-size);
  color: var(--sidebar-fg-dark);
}

#new-note-btn {
  position: fixed;
  bottom: 16px;
  right: 16px;
  z-index: 1001;

  /*transform: translate(-50%, -15%);*/
  background-color: var(--accent);
}

#new-note-btn:hover {
  background-color: white;
}

#new-note-btn img {
  width: 32px;
}

/** saved-notes-list: list of all notes in state */
#saved-notes-list {
  box-sizing: border-box;
  margin: 0;
  padding: 0.5em;
  width: 100%;
  color: var(--sidebar-fg-dark);
}

/** saved-note: individual note list item */
.saved-note {
  box-sizing: border-box;
  list-style-type: none;
  height: max-content;
  width: 100%;
  padding: 0.75em 0.25em;

  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;

  border-style: none;
  border-bottom: 1px solid gray;
}

.saved-note:hover {
  background-color: var(--content-bg-dark);
}

/** saved-note-title: title of note */
.saved-note-title {
  font-weight: bold;
  font-size: var(--note-header-size);
}

/** saved-note-text-snippet: a snippet of the note the user saved */
.saved-note-text-snippet {
  margin: 0.85em 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;

  font-size: var(--note-text-size);
  text-indent: 1em; 
  color: inherit;
}

/** saved-note-date: date the note was last saved */
.saved-note-date {
  font-size: var(--note-date-size);
  opacity: 0.65;
}


/** CURRENT NOTE SETUP */
/** current-note: wrapper when creating / editing a note */
.current-note {
  z-index: 1000;
  box-sizing: border-box;
  display: none; 
  padding: 1em 1.25em;

  color: var(--content-fg-dark);
  background-color: var(--content-bg-dark);
}

.current-note.selected {
  display: block;
  position: absolute;
  height: 100%;
  width: 100%;
}

/** edit-note: the title and text of the current note being created/edited */
.edit-note {
  max-height: 100%;
  height: 100%;

  display: flex;
  flex-flow: column nowrap;

  color: inherit;
  background-color: inherit;
}


/** title of current note */
#edit-note-title {
  width: 100%;
  margin-bottom: 0.5em;
  font-size: var(--selected-note-header-size);
  font-weight: bold;

  border-style: none;
  color: inherit;
  background-color: inherit;
}

#edit-note-title::placeholder {
  opacity: 0.8;
}

/** text of current note */
#edit-note-text {
  flex: 1 1 auto;
  font-size: var(--note-text-size);
  line-height: 150%;

  color: inherit;
  background-color: inherit; 
  resize: none;
  padding: 1em;
  
  border-style: solid;
  border-color: var(--sidebar-bg-dark);
  border-radius: 8px;
}

/** SCROLLBAR SETUP */
/** scrollbar width */
::-webkit-scrollbar {
  width: 10px;
}

/** track */
::-webkit-scrollbar-track {
  background: #f1f1f1; 
  background: #888; 
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--header-bg-dark);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555; 
}



/** DESKTOP VIEW */
@media screen and (min-width: 750px) {
  /** display notes will NOT grow and is resized to 300px */
  .all-notes {
    max-width: 350px;
    flex: 0 1 350px;
  }

  /** edit note view will be displayed, taking up the remaining space
   ** after display-notes */
  .current-note, .current-note.selected {
    position: static;
    display: block;
    flex: 1 1 100%;
  }
}

